tests/ui/restrictions/naked-impl-restriction.rs
// compile-flags: --crate-type=lib
#![feature(impl_restriction)]

pub impl trait Foo {} //~ ERROR expected `(`
